--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,20 +4,26 @@
 <body class="login_body">
 <div class="container">
 
-    <form class="form-signin">
+
+        <form class="form-signin" action="/login" method="post">
         <h3 class="form-signin-heading">智库资源信息系统登录</h3>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="用户名" required autofocus>
+            <!-- show any messages that come back with authentication -->
+            <% if (message.length > 0) { %>
+            <div class="alert alert-danger"><%= message %></div>
+            <% } %>
+        <label for="uname" class="sr-only">用户名</label>
+        <input type="text" id="uname" name="username" class="form-control" placeholder="用户名" required autofocus>
         <label for="inputPassword" class="sr-only">密码</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="密码" required>
+        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="密码" required>
         <div class="checkbox">
             <label>
-                <input type="checkbox" value="remember-me"> 记住我
+                <input type="checkbox"  name="remember" value="yes"> 记住我
             </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
     </form>
 </div>
-</div>
+
+
 <% include footer.ejs %>
 
