--- a/views/top_nav.ejs
+++ b/views/top_nav.ejs
@@ -7,13 +7,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">智库资源信息系统</a>
+            <a class="navbar-brand" href="/">智库资源信息系统</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">设置</a></li>
-                <li><a href="#">个人资料</a></li>
-                <li><a href="#">退出</a></li>
+                <li><a href="#">你好,<%= user.username %></a></li>
+                <!--<li><a href="#">个人资料</a></li>-->
+                <li><a href="/logout">退出</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
