--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,7 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 
-     <link href="./stylesheets/style.css" rel="stylesheet">
+     <link href="/stylesheets/style.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--&lt;!&ndash;[if lt IE 9]>-->
