--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,19 +15,17 @@
                   padding: 15px 8px;
               }
           </style>
-        <table class="table table-striped">
+        <table class="table table-striped" style="white-space: normal">
           <thead>
           <tr>
               <th>序号</th>
             <th>姓名</th>
-            <th>姓别</th>
             <th>职务</th>
             <th>职称</th>
             <th>手机号</th>
             <th>Email</th>
             <th>单位</th>
-            <th>智库类别</th>
-            <th>类别细分项</th>
+            <th>详情</th>
           </tr>
           </thead>
           <tbody>
@@ -36,15 +34,13 @@
 
           <tr>
               <td><%= k+1 %></td>
-          <td><%= v.username %></td>
-          <td>男</td>
-          <td>研究院主任</td>
-          <td>主任医师</td>
-          <td><%= v.username %></td>
-          <td><%= v.username %></td>
-          <td>康复学分会</td>
-          <td>123213213</td>
-          <td>123213213</td>
+          <td><%= v.UserName %></td>
+          <td style="max-width:120px;overflow:hidden"><%=v.Post%></td>
+          <td  style="max-width:120px;overflow:hidden"><%= v.Title%></td>
+          <td><%= v.Mobile %></td>
+          <td><%= v.Email %></td>
+          <td style="max-width:120px;overflow:hidden"><%= v.Company%></td>
+          <td><a class="btn-link" href="/expert/<%= v.id %>">更多</a></td>
           </tr>
 
           <% }) %>
