--- a/views/top_nav.ejs
+++ b/views/top_nav.ejs
@@ -15,9 +15,9 @@
                 <!--<li><a href="#">个人资料</a></li>-->
                 <li><a href="/logout">退出</a></li>
             </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
+            <div class="navbar-form navbar-right">
+                <input id="expert-search" type="text" class="form-control" placeholder="查询关键字 : 姓名 , 职务">
+            </div>
         </div>
     </div>
 </nav>
