--- a/views/expert.ejs
+++ b/views/expert.ejs
@@ -5,7 +5,7 @@
     <div class="row">
         <% include left.ejs %>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h2 class="sub-header"><%= title %></h2>
+            <h2 class="sub-header"><%= title %></h2> &nbsp;<a class="btn-link" href="/">返回</a>
 
             <div style="margin-top:30px;">
                 <style>
@@ -72,4 +72,5 @@
         </div>
     </div>
 </div>
+<% include commonScript.ejs %>
 </body><% include footer.ejs %>
