--- a/views/add_expert.ejs
+++ b/views/add_expert.ejs
@@ -11,7 +11,7 @@
       <h2 class="sub-header">添加专家</h2>
       <div  style="max-width:500px;margin-top:30px;">
 
-          <form class="form-horizontal">
+          <form class="form-horizontal" action="" method="post">
               <div class="form-group">
                   <label for="name" class="col-sm-2 control-label">姓名</label>
                   <div class="col-sm-10">
@@ -65,7 +65,7 @@
               <!--</div>-->
               <div class="form-group">
                   <div class="col-sm-offset-2 col-sm-10">
-                      <a href="javascript:;" class="btn btn-primary" id="upload">保存</a>
+                      <button class="btn btn-primary" type="submit">保存</button>
                   </div>
               </div>
           </form>
