--- a/views/add_expert.ejs
+++ b/views/add_expert.ejs
@@ -140,7 +140,7 @@
               <div class="form-group">
 
                   <div class="col-sm-offset-2 col-sm-10">
-                      <button  type="button"  class="btn btn-primary" id="btn_save" >保存</button>
+                      <button  type="button"  class="btn btn-primary" id="btn_save" >&nbsp;保 存&nbsp;</button>
                   </div>
               </div>
           </form>
