--- a/views/left.ejs
+++ b/views/left.ejs
@@ -4,9 +4,9 @@
         <li name="add_expert"><a href="/add_expert">添加专家</a></li>
     </ul>
     <ul class="nav nav-sidebar">
-        <li><a href="">短信列表</a></li>
-        <li><a href="">模版配置</a></li>
-        <li><a href="">用户管理</a></li>
+        <li><a href="javascript:alert('此功能敬请期待');" class="btn-default">短信列表</a></li>
+        <li><a href="javascript:alert('此功能敬请期待');"  class="btn-default">模版配置</a></li>
+        <li><a href="javascript:alert('此功能敬请期待');"  class="btn-default">用户管理</a></li>
     </ul>
 
 </div>
