--- a/views/top_nav.ejs
+++ b/views/top_nav.ejs
@@ -16,7 +16,7 @@
                 <li><a href="/logout">退出</a></li>
             </ul>
             <div class="navbar-form navbar-right">
-                <input id="expert-search" type="text" class="form-control" placeholder="查询关键字 : 姓名 , 职务">
+                <input id="expert-search" type="search" class="form-control" placeholder="查询关键字 : 姓名 , 职务">
             </div>
         </div>
     </div>
