--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,6 +15,8 @@
 
      <link href="/stylesheets/style.css" rel="stylesheet">
 
+    <link rel="icon" href="/favicon.ico">
+
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--&lt;!&ndash;[if lt IE 9]>-->
     <!--<script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]&ndash;&gt;-->
