--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<% include header.ejs %>
+﻿<% include header.ejs %>
 
 
 <body class="login_body">
@@ -6,7 +6,7 @@
 
 
         <form class="form-signin" action="/login" method="post">
-        <h3 class="form-signin-heading">智库资源信息系统登录</h3>
+        <h3 class="form-signin-heading">蓝海智库系统</h3>
             <!-- show any messages that come back with authentication -->
             <% if (message.length > 0) { %>
             <div class="alert alert-danger"><%= message %></div>
